--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -26,6 +26,7 @@ html, body {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   z-index: 1; 
+  border-radius: 0px;
 }
 
 .modelInfo h2 {
@@ -43,15 +44,24 @@ html, body {
   background-color: #f0f8ff; 
 }
 
+.btns {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.modelInfo > .btns > .btn-hidden {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+}
+
 .modelInfo button {
   margin-top: 10px; 
   padding: 10px;
   background-color: #4682b4; 
   color: #fff; 
   border: none;
-  border-radius: 4px;
   cursor: pointer;
-  width: 100%;
+  width: 50%;
   height: 30px;
   display: flex;
   align-items: center;
