--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -17,7 +17,8 @@ html, body {
   display: flex;
   flex-direction: column; 
   width: 300px; 
-  max-height: 400px; 
+  min-height: 300px;
+  max-height: 300px;
   position: absolute;
   background-color: #f0f8ff; 
   right: 170px; 
